# ledgerlens

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  architectur.md  architecture.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 36e5776eb341_drop_is_default_from_model_configs.py  7784f5dcc4a9_fix_boolean_server_defaults.py  b644feb16736_add_supports_vision_to_model_configs.py  bb82796a7960_add_store_matching_and_enhanced_line_.py  c11f3c9ec32f_change_api_key_column_to_text.py  feded377c21d_initial_schema.py
backend/app/: main.py  worker.py
backend/app/core/: config.py  database.py  dependencies.py  encryption.py  exceptions.py  pagination.py  rate_limit.py  security.py
backend/app/middleware/: auth.py  security.py
backend/app/models/: __init__.py  base.py  canonical_item.py  household.py  line_item.py  match_suggestion.py  model_config.py  processing_job.py  receipt.py  store.py  store_alias.py  store_merge_suggestion.py  user.py  user_session.py
backend/app/prompts/: system.md.j2  system_vision.md.j2  user.md.j2  user_vision.md.j2
backend/app/repositories/: canonical_item.py  household.py  line_item.py  match_suggestion.py  model_config.py  processing_job.py  receipt.py  session.py  store.py  store_alias.py  store_merge_suggestion.py  user.py
backend/app/routers/: admin.py  auth.py  dashboard.py  household.py  items.py  jobs.py  line_items.py  receipts.py  ws.py  (+3 more)
backend/scripts/: migrate_encrypt_keys.py  seed_store_aliases.py
backend/tests/: conftest.py  factories.py
(+109 files in other folders)
